--- a/author-page.html
+++ b/author-page.html
@@ -22,7 +22,8 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul id="navbarSupportedContent" class="navbar-nav mb-lg-0 text-center">
+                <ul id="navbarSupportedContent"
+                    class="navbar-nav mb-lg-0 text-center collapse navbar-collapse d-md-flex">
                     <li class="nav-item d-sm-none d-flex">
                         <input type="text" name="search" placeholder="Search" class="border-0">
                         <button class="border-0">
@@ -98,7 +99,7 @@
         </nav>
     </header>
     <main class="container custorm-container px-0">
-        <section>
+        <section class="section-first">
             <div class="intro-infor">
                 <article class="person-infor text-center">
                     <div>
@@ -399,7 +400,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/function.js"></script>
+    <script src="./asset/script/scripts.js"></script>
 </body>
 
 </html>
