--- a/single-post.html
+++ b/single-post.html
@@ -18,11 +18,12 @@
                     <img src="./asset/img/logo-header.png" alt="Logo" class="d-inline-block align-text-top">
                 </a>
                 <button class="navbar-toggler d-md-none bg-light btn-show-nav" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul id="navbarSupportedContent" class="navbar-nav mb-lg-0 text-center">
+                <ul id="navbarSupportedContent"
+                    class="navbar-nav mb-lg-0 text-center collapse navbar-collapse d-md-flex">
                     <li class="nav-item d-sm-none d-flex">
                         <input type="text" name="search" placeholder="Search" class="border-0">
                         <button class="border-0">
@@ -337,7 +338,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/function.js"></script>
+    <script src="./asset/script/scripts.js"></script>
 </body>
 
 </html>
