--- a/create-post.html
+++ b/create-post.html
@@ -22,7 +22,8 @@
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <ul id="navbarSupportedContent" class="navbar-nav mb-lg-0 text-center">
+                <ul id="navbarSupportedContent"
+                    class="navbar-nav mb-lg-0 text-center collapse navbar-collapse d-md-flex">
                     <li class="nav-item d-sm-none d-flex">
                         <input type="text" name="search" placeholder="Search" class="border-0">
                         <button class="border-0">
@@ -90,12 +91,9 @@
 
         </nav>
     </header>
-    <main class="container custorm-container px-0 creact-post">
+    <main class="container custorm-container px-0 create-post">
         <h2 class="text-center m-4">Create New Post</h2>
         <div class="form-create">
-            <div class="img">
-                <img class="img-fluid" src="./asset/img/logo-header.png" alt="">
-            </div>
             <form action="#" class="d-flex flex-column">
                 <h3>Form Create Post</h3>
                 <div>
@@ -116,7 +114,7 @@
                 </div>
                 <div class="form-floating">
                     <textarea class="form-control" oninput="countCharacters()" placeholder="Enter Content" id="content"
-                        style="height: 100px"></textarea>
+                        style="height: 350px"></textarea>
                     <label for="content">
                         <h6>Enter Content</h6>
                     </label>
@@ -222,5 +220,5 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/function.js"></script>
+    <script src="./asset/script/scripts.js"></script>
 </body>
