--- a/author-page.html
+++ b/author-page.html
@@ -400,6 +400,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
+    <script src="./asset/script/changeColorBg.js"></script>
     <script src="./asset/script/scripts.js"></script>
 </body>
 
