--- a/home-page.html
+++ b/home-page.html
@@ -375,6 +375,7 @@
         });
     </script> -->
     <script src="./asset/script/vendor.min.js"></script>
+    <script src="./asset/script/changeColorBg.js"></script>
     <script src="./asset/script/scripts.js"></script>
 </body>
 
