--- a/create-post.html
+++ b/create-post.html
@@ -220,5 +220,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
+    <script src="./asset/script/changeColorBg.js"></script>
     <script src="./asset/script/scripts.js"></script>
+    <script src="./asset/script/addpost.js"></script>
 </body>
