--- a/single-post.html
+++ b/single-post.html
@@ -338,6 +338,7 @@
         </div>
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
+    <script src="./asset/script/changeColorBg.js"></script>
     <script src="./asset/script/scripts.js"></script>
 </body>
 
