--- a/create-post.html
+++ b/create-post.html
@@ -221,5 +221,6 @@
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
     <script src="./asset/script/changeColorBg.js"></script>
-    <script src="./asset/script/addpost.js"></script>
+    <script src="./asset/script/checkdata.js"></script>
+    <script src="./asset/script/adddatapost.js"></script>
 </body>
