--- a/author-page.html
+++ b/author-page.html
@@ -113,9 +113,9 @@
                 </article>
                 <article class="text">
                     <p>
-                        Meet Jonathan Doe, a passionate writer and blogger with a love for technology
-                        and travel. Jonathan holds a degree in Computer Science and has spent
-                        year working in the tach in dustry, gauning a deep understanding
+                        Meet Jonathan Doe, a passionate writer and blogger with a love for <br>
+                        technology and travel. Jonathan holds a degree in Computer Science and <br>
+                        has spent year working in the tach in dustry, gauning a deep understanding <br>
                         of the impact technology has on our lives
                     </p>
                 </article>
