--- a/home-page.html
+++ b/home-page.html
@@ -375,9 +375,10 @@
         });
     </script> -->
     <script src="./asset/script/vendor.min.js"></script>
-    <script src="./asset/script/changeColorBg.js"></script>
+    <script src="./asset/script/changecolorbg.js"></script>
     <!-- <script src="./asset/script/scripts.js"></script> -->
-    <script src="./asset/script/rendexAjax.js"></script>
+    <script src="./asset/script/rendeajax.js"></script>
+    <!-- <script src="./asset/script/deletepost.js"></script> -->
 </body>
 
 </html>
