--- a/fix-post.html
+++ b/fix-post.html
@@ -108,15 +108,12 @@
                         <input type="text" class="form-control" id="title" placeholder="Enter Title Post"
                             aria-label="Title" aria-describedby="basic-addon1" oninput="inputCharacters()">
                     </label>
-                    <span id="errortitle"></span>
                 </div>
                 <div class="mb-3">
                     <label for="img-post" class="form-label w-100">
                         <h5>Post Image</h5>
                         <input class="form-control" type="file" id="post-img" multiple>
                     </label>
-
-                    <span id="errorimg"></span>
                 </div>
                 <div class="form-floating">
                     <textarea class="form-control" oninput="countCharacters()" placeholder="Enter Content" id="content"
@@ -124,7 +121,6 @@
                     <label for="content">
                         <h6>Enter Content</h6>
                     </label>
-                    <span id="errorcontent"></span>
                     <span id="charCount">0/10000</span>
                 </div>
                 <button id="submit" class="btn btn-primary text-center border-0">Add Fix Post</button>
@@ -227,6 +223,6 @@
     </footer>
     <script src="./asset/script/vendor.min.js"></script>
     <script src="./asset/script/changecolorbg.js"></script>
-    <script src="./asset/script/checkdata.js"></script>
+    <!-- <script src="./asset/script/checkdata.js"></script> -->
     <script src="./asset/script/fixpost.js"></script>
 </body>
