--- a/author-page.html
+++ b/author-page.html
@@ -101,13 +101,11 @@
     <main class="container custorm-container px-0">
         <section class="section-first">
             <div class="intro-infor">
-                <article class="person-infor text-center">
+                <article class="person-infor">
+                    <img src="./asset/img/img-user1-64px.png" alt="">
                     <div>
-                        <div>
-                            <img src="./asset/img/img-user1-64px.png" alt="">
-                            <span>Jonathan Doe</span>
-                        </div>
-                        <span class="note">Collaborator & Editor</span>
+                        <p>Jonathan Doe</p>
+                        <p>Collaborator & Editor</p>
                     </div>
 
                 </article>
