--- a/create-post.html
+++ b/create-post.html
@@ -105,7 +105,7 @@
                     <span id="errortitle"></span>
                 </div>
                 <div class="mb-3">
-                    <label for="img-post" class="form-label">
+                    <label for="post-img" class="form-label">
                         <h5>Post Image</h5>
                     </label>
                     <input class="form-control" type="file" id="post-img" multiple>
@@ -113,7 +113,7 @@
                 </div>
                 <div class="form-floating">
                     <textarea class="form-control" oninput="countCharacters()" placeholder="Enter Content" id="content"
-                        style="height: 350px"></textarea>
+                        style="height: 350px" id="content"></textarea>
                     <label for="content">
                         <h6>Enter Content</h6>
                     </label>
