--- a/fix-post.html
+++ b/fix-post.html
@@ -110,14 +110,14 @@
                     </label>
                 </div>
                 <div class="mb-3">
-                    <label for="img-post" class="form-label w-100">
+                    <label for="post-img" class="form-label w-100">
                         <h5>Post Image</h5>
                         <input class="form-control" type="file" id="post-img" multiple>
                     </label>
                 </div>
                 <div class="form-floating">
                     <textarea class="form-control" oninput="countCharacters()" placeholder="Enter Content" id="content"
-                        style="height: 350px"></textarea>
+                        style="height: 350px" id="content"></textarea>
                     <label for="content">
                         <h6>Enter Content</h6>
                     </label>
