--- a/create-post.html
+++ b/create-post.html
@@ -105,8 +105,9 @@
                     <span id="errortitle"></span>
                 </div>
                 <div class="mb-3">
-                    <label for="post-img" class="form-label">
-                        <h5>Post Image</h5>
+                    <h5>Post Image</h5>
+                    <label for="post-img" class="form-label form-chosen-file">
+                        Chosen File
                     </label>
                     <input class="form-control" type="file" id="post-img" multiple>
                     <span id="errorimg"></span>
