--- a/create-post.html
+++ b/create-post.html
@@ -110,6 +110,7 @@
                         Chosen File
                     </label>
                     <input class="form-control" type="file" id="post-img" multiple>
+                    <img src="" alt="" id="show-img">
                     <span id="errorimg"></span>
                 </div>
                 <div class="form-floating">
