--- a/create-post.html
+++ b/create-post.html
@@ -188,6 +188,7 @@
                         </i>
                     </label>
                     <button type="button" class="btn btn-primary">Subscribe</button>
+                </form>
             </div>
         </div>
         <div class="last container custorm-container">
