--- a/single-post.html
+++ b/single-post.html
@@ -305,6 +305,7 @@
                         </i>
                     </label>
                     <button type="button" class="btn btn-primary">Subscribe</button>
+                </form>
             </div>
         </div>
         <div class="last container custorm-container">
