--- a/create-post.html
+++ b/create-post.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="form-floating">
                     <textarea class="form-control" oninput="countCharacters()" placeholder="Enter Content" id="content"
-                        style="height: 350px" id="content"></textarea>
+                        style="height: 350px"></textarea>
                     <label for="content">
                         <h6>Enter Content</h6>
                     </label>
